# GOSTnets

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  GOSTnets.html  LICENSE  README.html  README.md  WB-IGO-RIDER.md  genindex.html  merry_christmas.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-tutorial.txt  requirements.txt  search.html  searchindex.js  setup.py  test_matteo.ipynb
.doctrees/: GOSTnets.doctree  README.doctree  environment.pickle
.doctrees/Tutorials/: EXAMPLE_Finding_links_between_pairs.doctree  EXAMPLE_Fixing_your_road_network.doctree  EXAMPLE_Gravity_Calculations.doctree  README.doctree  Step_1-Extract_From_OSM.doctree  Step_2-Clean_Network.doctree  Step_3-Using_your_Graph.doctree
.doctrees/api/: GOSTnets.doctree  index.doctree  modules.doctree
.github/workflows/: build.yml  gh-pages.yml  publish.yml  release.yml  test.yml
GOSTnets/: Calculate_OD.py  GOSTnet.py  LoadOSM.py  Network_Clean.py  __init__.py  building_package.txt  calculate_od.py  calculate_od_raw.py  conversion_utils.py  core.py  fetch_od.py  fetch_pois.py  load.py  load_osm.py  load_osmium.py  load_traffic.py  load_traffic2.py  mapbox_traffic.py  network_clean.py  optimization.py  osm_parser.py
GOSTnets/utils/: graphtool.py
Tutorial/: EXAMPLE Finding_links_between_pairs.ipynb  EXAMPLE Gravity Calculations.ipynb  Feature_Update_Test_Script.ipynb  Step 1 - Extract From OSM.ipynb  Step 2 - Clean Network.ipynb  Step 3 - Using your Graph.ipynb  Step 4 - Gravity Calculations.ipynb
Tutorial/tutorial_data/: OD_links_usage.csv  rek2.qpj  rek_grid_pop.shx
Tutorials/: EXAMPLE Finding_links_between_pairs.ipynb  EXAMPLE Fixing your road network.ipynb  EXAMPLE Gravity Calculations.ipynb  EXAMPLE_Finding_links_between_pairs.html  EXAMPLE_Finding_links_between_pairs.ipynb  EXAMPLE_Fixing_your_road_network.html  EXAMPLE_Fixing_your_road_network.ipynb  EXAMPLE_Gravity_Calculations.html  EXAMPLE_Gravity_Calculations.ipynb  README.html  README.md  Step 1 - Extract From OSM.ipynb  Step 2 - Clean Network.ipynb  Step 3 - Using your Graph.ipynb  Step_1-Extract_From_OSM.html  Step_1-Extract_From_OSM.ipynb  Step_2-Clean_Network.html  Step_2-Clean_Network.ipynb  Step_3-Using_your_Graph.html  Step_3-Using_your_Graph.ipynb
Tutorials/EXAMPLES/: GOSTNETS_MapBox_Example.ipynb
Tutorials/presentations/: gertin_gostnets_workshop_notes_20200216.pptx
Tutorials/tutorial_data/: OD_links_usage.csv  churches.dbf  rek_grid.prj  rek_grid.sbn  rek_grid.shx  rek_grid_pop.shp
Tutorials/tutorial_outputs/: placeholder.txt
_sources/: GOSTnets.rst
_sources/Tutorials/: EXAMPLE_Finding_links_between_pairs.ipynb  README.md  Step_1-Extract_From_OSM.ipynb
_sources/api/: modules.rst
api/: GOSTnets.html  index.html  modules.html
docs/: GOSTnets.rst  Tutorials  _config.yml  _toc.yml  index.rst  mapexport-qgis.rst  modules.rst  myst.yml  primary_sidebar_footer.md
docs/api/: GOSTnets.rst  calculate_od_raw.md  conversion_utils.md  core.md  fetch_od.md  fetch_pois.md  graphtool.md  load_osm.md  network_clean.md  optimization.md  osm_parser.md
docs/source/: GOSTnets.rst  conf.py  index.rst  modules.rst
docs/tutorials/: EXAMPLE_End2End_Overture.ipynb  EXAMPLE_Finding_links_between_pairs.ipynb  README.md  Step_1-Extract_From_OSM.ipynb  Step_1-Extract_road_network.ipynb  Step_2-Clean_Network.ipynb  Step_3-Using_your_Graph.ipynb
docs/tutorials/tutorial_data/: rek2.prj  rek_grid.dbf  rek_grid.prj  rek_grid.sbx  rek_grid.shp  rek_grid_pop.dbf
docs/tutorials/tutorial_outputs/: iceland_network_clean_nodes.csv  iceland_overture_sample_nodes.csv  iceland_unclean_nodes.csv
src/GOSTnets/: __init__.py  calculate_od_raw.py  conversion_utils.py  core.py  fetch_od.py  fetch_pois.py  load_osm.py  network_clean.py  optimization.py  osm_parser.py
src/GOSTnets/utils/: graphtool.py
testing_advanced_snapping/: new_edges.shp  new_edges.shx  testing_advanced_snapping.ipynb  toolbox.py
testing_advanced_snapping/sample/: edges.shp  edges.shx  nodes.dbf  nodes.shp  nodes.shx  saved_by_gostnets_nodes.csv
tests/: conftest.py  iceland_unclean_nodes.csv  osm_map.map  test_calculate_od_raw.py  test_conversion_utils.py  test_core.py  test_core_integrative.py  test_fetch_od.py  test_fetch_pois.py  test_load_osm.py  test_load_osm_integrative.py  test_network_clean.py  test_optimization.py  test_osm_parser.py  test_osm_parser_integrative.py  test_workflow.py
tutorial/: Finding_links_between_pairs.ipynb  Step 1 - Extract From OSM.ipynb  Step 2 - Clean Network.ipynb  Step 3 - Using your Graph.ipynb
tutorial/tutorial_data/: rek_grid_pop_gravity2.dbf  rek_grid_pop_gravity2.shp  rek_grid_pop_gravity2.shx
